assets/main.scss
---
---

@import "minima";

.post-list-heading {
  text-align: center;
}

.post {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.post-heading {
  margin-bottom: 0.5rem;
}

.post-meta {
  margin-bottom: 1rem;
}

